Fixed bug #77599 (Unbuffered queries; native prepared statements memory leak)